may have fixed the halos matching thing

--- a/Match Stars to Halos.ipynb
+++ b/Match Stars to Halos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -29,78 +29,274 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "parentid_dicts = []\n",
+    "#parentid_dicts = []\n",
     "for j in range(10):\n",
-    "    print j,\n",
+    "    print j\n",
     "    fname = '/oak/stanford/orgs/kipac/edarragh/m12i_lsr0/slice-%d.hdf5'%j\n",
     "    with h5py.File(fname, 'r') as f1:        \n",
     "        IDs = f1['parentid'][()]#[:N]\n",
-    "        parentid_dicts.append(dict(izip(IDs, xrange(len(IDs)))))"
+    "        pid_d = dict()\n",
+    "        \n",
+    "        for i, ID in enumerate(IDs):\n",
+    "            if ID in pid_d:\n",
+    "                pid_d[ID][1] = i # this assumes its one continuous patch. \n",
+    "                # if not, there could be workaroudns 0\n",
+    "            else:\n",
+    "                pid_d[ID] = np.array([i, i+1])\n",
+    "\n",
+    "        #parentid_dicts.append(pid_d) #dict(izip(IDs, xrange(len(IDs)))))\n",
+    "        \n",
+    "        with open('/home/users/swmclau2/scratch/parentid_dict_%d.pkl'%j, 'w') as f:\n",
+    "            pickle.dump(pid_d, f)"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "with open('parentid_dicts.pkl', 'w') as f:\n",
     "    pickle.dump(parentid_dicts, f)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "with open('parentid_dicts.pkl', 'r') as f:\n",
     "    parentid_dicts = pickle.load(f)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if mask_dict becomes too large, may need to save several, like above. Then when you switch from one to the next, you need to add the length of the previous to the indexing  to mean_vals"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204\n"
+      "j 0\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 1\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 2\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 3\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 4\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 5\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 6\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 7\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 8\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n",
+      "j 9\n",
+      "i 5\n",
+      "0 1 2 3\n",
+      "**********\n",
+      "i 6\n",
+      "0 1 2 3 4\n",
+      "**********\n",
+      "i 7\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 8\n",
+      "0 1 2 3 4 5 6 7 8\n",
+      "**********\n",
+      "i 9\n",
+      "0 1 2 3 4 5 6 7 8 9 10 11 12\n",
+      "**********\n"
      ]
     }
    ],
    "source": [
     "mask_dict = OrderedDict()\n",
     "#i = 5\n",
-    "for i in xrange(5, 205): #, 600):\n",
-    "    print i,\n",
-    "    fname = '/oak/stanford/orgs/kipac/users/enadler/m12i_rockstar_dm/catalog_hdf5/star_%03d.hdf5'%i\n",
+    "for j in xrange(10):\n",
+    "    print 'j',j\n",
+    "    with open('/home/users/swmclau2/scratch/parentid_dict_%d.pkl'%j, 'r') as f:\n",
+    "        parentid_dict = pickle.load(f)\n",
+    "        \n",
+    "    for i in xrange(5, 10): #, 600):\n",
+    "        print 'i',i\n",
+    "        fname = '/oak/stanford/orgs/kipac/users/enadler/m12i_rockstar_dm/catalog_hdf5/star_%03d.hdf5'%i\n",
     "\n",
-    "    with h5py.File(fname, 'r') as f:\n",
-    "        mask = np.array(f['star.number']) != -1\n",
-    "        ar = np.array(f['star.indices'])[mask]\n",
-    "        halo_ID = np.array(f['id'])[mask]\n",
+    "        with h5py.File(fname, 'r') as f:\n",
+    "            mask = np.array(f['star.number']) != -1\n",
+    "            ar = np.array(f['star.indices'])[mask]\n",
+    "            halo_ID = np.array(f['id'])[mask]\n",
     "\n",
-    "        for k, stars in enumerate(ar):\n",
-    "            key = halo_ID[k]\n",
-    "            mask_dict[key] = []\n",
-    "            for j in xrange(10):\n",
-    "                mask1 = [parentid_dicts[j][s] for s in stars if s in parentid_dicts[j]]\n",
-    "                mask_dict[key].append(mask1)"
+    "            #for k, stars in enumerate(ar):\n",
+    "            #    key = halo_ID[k]\n",
+    "            #    mask_dict[key] = []\n",
+    "            #    for j in xrange(10):\n",
+    "            #        mask1 = [parentid_dicts[j][s] for s in stars if s in parentid_dicts[j]]\n",
+    "            #        mask_dict[key].append(mask1)\n",
+    "\n",
+    "\n",
+    "            for k, stars in enumerate(ar):\n",
+    "                print k,\n",
+    "                key = halo_ID[k]\n",
+    "                if key not in mask_dict:\n",
+    "                    mask_dict[key] = [[] for _ in xrange(10)]\n",
+    "                \n",
+    "                mask1 = [parentid_dict[s] for s in stars if s in parentid_dict]\n",
+    "                if len(mask1)>0:\n",
+    "                    mask_dict[key][j].extend(mask1)\n",
+    "            print\n",
+    "            print '*'*10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17376\n"
+      "36\n"
      ]
     }
    ],
@@ -109,16 +305,20 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "with open('mask_dict.pkl', 'w') as f:\n",
+    "with open('/home/users/swmclau2/scratch/mask_dict.pkl', 'w') as f:\n",
     "    pickle.dump(mask_dict, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -139,10 +339,197 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "print mask_dict.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "~~~~~~~~~~ 0 ~~~~~~~~~~\n",
+      "0 0\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "4 []\n",
+      "5 5\n",
+      "6 6\n",
+      "7 7\n",
+      "8 8\n",
+      "9 9\n",
+      "10 10\n",
+      "11 11\n",
+      "12 []\n",
+      "13 13\n",
+      "14 14\n",
+      "15 []\n",
+      "16 16\n",
+      "17 17\n",
+      "18 18\n",
+      "19 19\n",
+      "20 20\n",
+      "21 21\n",
+      "22 22\n",
+      "23 23\n",
+      "24 24\n",
+      "25 25\n",
+      "26 26\n",
+      "27 27\n",
+      "28 28\n",
+      "29 []\n",
+      "30 30\n",
+      "31 []\n",
+      "32 32\n",
+      "33 33\n",
+      "34 []\n",
+      "35 []\n",
+      "~~~~~~~~~~ 1 ~~~~~~~~~~\n",
+      "0 0\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "4 []\n",
+      "5 5\n",
+      "6 6\n",
+      "7 7\n",
+      "8 8\n",
+      "9 9\n",
+      "10 10\n",
+      "11 11\n",
+      "12 []\n",
+      "13 13\n",
+      "14 14\n",
+      "15 []\n",
+      "16 16\n",
+      "17 17\n",
+      "18 18\n",
+      "19 19\n",
+      "20 20\n",
+      "21 21\n",
+      "22 22\n",
+      "23 23\n",
+      "24 24\n",
+      "25 25\n",
+      "26 26\n",
+      "27 27\n",
+      "28 28\n",
+      "29 []\n",
+      "30 30\n",
+      "31 []\n",
+      "32 32\n",
+      "33 33\n",
+      "34 []\n",
+      "35 []\n",
+      "~~~~~~~~~~ 2 ~~~~~~~~~~\n",
+      "0 0\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "4 []\n",
+      "5 5\n",
+      "6 6\n",
+      "7 7\n",
+      "8 8\n",
+      "9 9\n",
+      "10 10\n",
+      "11 11\n",
+      "12 []\n",
+      "13 13\n",
+      "14 14\n",
+      "15 []\n",
+      "16 16\n",
+      "17 17\n",
+      "18 18\n",
+      "19 19\n",
+      "20 20\n",
+      "21 21\n",
+      "22 22\n",
+      "23 23\n",
+      "24 24\n",
+      "25 25\n",
+      "26 26\n",
+      "27 27\n",
+      "28 28\n",
+      "29 []\n",
+      "30 30\n",
+      "31 []\n",
+      "32 32\n",
+      "33 33\n",
+      "34 []\n",
+      "35 []\n",
+      "~~~~~~~~~~ 3 ~~~~~~~~~~\n",
+      "0 0\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "4 []\n",
+      "5 5\n",
+      "6 6\n",
+      "7 7\n",
+      "8 8\n",
+      "9 9\n",
+      "10 10\n",
+      "11 11\n",
+      "12 []\n",
+      "13 13\n",
+      "14 14\n",
+      "15 []\n",
+      "16 16\n",
+      "17 17\n",
+      "18 18\n",
+      "19 19\n",
+      "20 20\n",
+      "21 21\n",
+      "22 22\n",
+      "23 23\n",
+      "24 24\n",
+      "25 25\n",
+      "26 26\n",
+      "27 27\n",
+      "28 28\n",
+      "29 []\n",
+      "30 30\n",
+      "31 []\n",
+      "32 32\n",
+      "33 33\n",
+      "34 []\n",
+      "35 []\n",
+      "~~~~~~~~~~ 4 ~~~~~~~~~~\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-893b922c1a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk_no\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0;32mprint\u001b[0m \u001b[0;34m'~'\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk_no\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'~'\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# this is a slow disk read\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mobj_no\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mobj_key\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj_mask\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmask_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/home/users/swmclau2/.local/lib/python2.7/site-packages/h5py/_hl/dataset.pyc\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, args)\u001b[0m\n\u001b[1;32m    494\u001b[0m         \u001b[0mmspace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5s\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_simple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    495\u001b[0m         \u001b[0mfspace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 496\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmspace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfspace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdxpl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dxpl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    497\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[0;31m# Patch up the output for NumPy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "for j in range(10):\n",
     "    fname1 = '/oak/stanford/orgs/kipac/edarragh/m12i_lsr0/slice-%d.hdf5'%j\n",
@@ -151,16 +538,73 @@
     "        continue # don't load this file if there's nothing in them \n",
     "    with h5py.File(fname1, 'r') as f1:\n",
     "        for k_no, k in enumerate(keys):\n",
-    "            print '~'*10\n",
+    "            print '~'*10, k_no, '~'*10\n",
     "            val = f1[k][()] # this is a slow disk read\n",
     "            \n",
     "            for obj_no, (obj_key, obj_mask) in enumerate(mask_dict.iteritems()):\n",
-    "                print j, k_no, obj_no\n",
+    "                print obj_no,\n",
     "                if len(obj_mask)==0 or len(obj_mask[j]) == 0:\n",
+    "                    print obj_mask[j]\n",
     "                    continue\n",
+    "                print obj_no\n",
+    "                #print obj_mask[j]\n",
     "                #print j, k_no, obj_no\n",
-    "                mean_vals[obj_no, k_no] = val[obj_mask[j]].mean()\n",
-    "            del val"
+    "                #mean_vals[obj_no, k_no] = val[obj_mask[j]].mean()\n",
+    "                mean_vals[obj_no, k_no] = np.mean([val[om[0]:om[1]].mean() for om in obj_mask[j]])\n",
+    "\n",
+    "            del val\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mask_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_vals[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('mean_vals.npy', mean_vals)"
    ]
   },
   {
@@ -170,9 +614,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "np.save('mean_vals.npy', mean_vals)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
